# gtest-example1

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  util.c
tests/: CMakeLists.txt  main_test.h  test_util.cpp
